fix: 🐛 making sh-screen work on tablets
✅ Closes: SH-459

--- a/src/app/components/sh-screen/sh-screen.component.scss
+++ b/src/app/components/sh-screen/sh-screen.component.scss
@@ -1,13 +1,30 @@
 .sh-screen {
   z-index: 200;
+  width: 100vw;
+  height: 100vh;
+
+  .sh-container {
+    width: 50vw;
+    margin-left: auto;
+    margin-right: auto;
+    @media screen and (max-width: 576px) {
+      width: 90vw;
+    }
+    @media screen and (max-width: 768px) {
+      width: 75vw;
+    }
+    @media screen and (max-width: 992px) {
+      width: 65vw;
+    }
+  }
 }
 .sound-health-logo {
-  width: 240.14px;
-  height: 167px;
+  width: 39%;
+  height: auto;
 }
 .sound-health {
-  width: 377.8px;
-  height: 167px;
+  width: 61%;
+  height: auto;
   padding-left: 20px;
 }
 
